--- a/index.html
+++ b/index.html
@@ -1,103 +1,244 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>个人博客</title>
-<link rel="shortcut icon" href="images/logo/my_logo.ico"/>
-<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">	
-</head>
-<body>
-<!-- Main Container -->
-<div class="container"> 
-  <!-- Header -->
-  <header class="header">
-    <h4 class="logo">个人博客
-	  <div class="middle">
-		<div class="bar bar1"></div>
-		<div class="bar bar2"></div>
-		<div class="bar bar3"></div>
-		<div class="bar bar4"></div>
-		<div class="bar bar5"></div>
-		<div class="bar bar6"></div>
-		<div class="bar bar7"></div>
-		<div class="bar bar8"></div>
-	</div>
-		</h4>
-  </header>
-  <!-- Hero Section -->
-<!--   <section class="intro"> -->
-    <div class="column">
-      <h3>ymacode</h3>
-      <img src="images/myphotos/master.jpg" alt="博客的照片" class="profile"> </div>
-    <div class="column">  
-     <br><br><br><br>
-      <p2><strong>We are all in the gutter,but some of us are looking the stars.</strong></p2>
-		<br><br><p>我们都身处沟壑,但仍有人仰望着星空~</p><br>
-    </div>
-	
-	
-<!--   </section> -->
-  <!-- Stats Gallery Section -->
-<!--   <div class="gallery"> -->
-	
-  <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="images/myphotos/2020.jpg" alt="2020" width="1800" height="1200" class="cards"/></a>
-      <h4>2020</h4>
-      <p class="tag">博学楼老操场合照</p>
-      <p class="text_column">树莓派的男孩</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/myphotos/2019.jpg" alt="2019" width="1800" height="1200" class="cards"/></a>
-      <h4>2019</h4>
-      <p class="tag">图书馆老胡随手拍</p>
-      <p class="text_column">当时在复习考研</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/myphotos/2018.jpg" alt="2018" width="1800" height="1200" class="cards"/></a>
-      <h4>2018</h4>
-      <p class="tag">军训的时光</p>
-      <p class="text_column">拿着模型枪的激动心情</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/myphotos/2017.jpg" alt="2017" width="1800" height="1200" class="cards"/></a>
-      <h4>2017</h4>
-      <p class="tag">有烟花的跨年合照</p>
-      <p class="text_column">2017年跨年夜在西区</p>
-    </div>
-  </div>
-  <div class="gallery">
-    <div class="thumbnail"> <a href="#"><img src="images/myphotos/robot.jpg" alt="金铁兽图片" width="1800" height="1200" class="cards"/></a>
-      <h4>建模</h4>
-      <p class="tag">使用maya建模还原童年的金铁兽</p>
-      <p class="text_column">初步认识三渲二</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/myphotos/guitar_model.jpg" alt="吉它图片" width="1800" height="1200" class="cards"/></a>
-      <h4>maya模型</h4>
-      <p class="tag">吉它</p>
-      <p class="text_column">guitar</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/myphotos/sword_model.jpg" alt="剑图片" width="1800" height="1200" class="cards"/></a>
-      <h4>saber剑</h4>
-      <p class="tag">模型</p>
-      <p class="text_column">锋利感</p>
-    </div>
-    <div class="thumbnail"> <a href="#"><img src="images/logo/willpower.png" alt="党标" width="1800" height="1200" class="cards"/></a>
-      <h4>AI描绘党的图案</h4>
-      <p class="tag">心中有党，成绩理想</p>
-      <p class="text_column">自由 平等 文明 和谐</p>
-    </div>
-  </div>
-<!--   </div> -->
-<!--   Footer Section -->
-  <footer id="contact">
-	  &emsp;&emsp;<a style="font-weight:bold" href="https://weibo.com/u/5753833558">新浪微博</a><br><br>
-	  &emsp;&emsp;<a style="font-weight:bold" href="https://space.bilibili.com/173487425">哔哩哔哩</a><br><br>
-	  &emsp;&emsp;<a style="font-weight:bold" href="https://me.csdn.net/qq_38870145">CSDN</a>
-    <p class="hero_header"><a style="font-weight:bolder" href="introduce/my_introduction.html">我的简历</a></p>
-<!-- 	  <div class="button"><a href="https://yongma16.github.io/introduce/my_introduction.html">点击查看</a></div> -->
-  </footer>
-  <div class="copyright" color="FFFF">&copy;2020&<strong>ymacode</strong></div>
-</div>
-<!-- Main Container Ends -->
-</body>
-</html>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>yma16个人主页</title>
+		<meta charset="utf-8">
+		<link rel="shortcut icon" href="images/logo/my_logo.ico"/>
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<style>
+			body {
+				background-color: #000000;
+				margin: 0px;
+				overflow: hidden;
+			}
+			p1{
+				vertical-align:middle;
+				text-align: center;
+				font-size:25px;
+				color:cornflowerblue;
+			}
+          a {
+                text-decoration: none;
+                color: #000;
+            }
 
+           a:hover {
+                opacity: 0.7;
+                color: #409EFF;
+            }
+
+           span {
+               display: inline-block;
+               padding: 10px;
+            }
+			.mytitle{
+			  font-size:25px;
+			  text-align: center;
+			  top: 10px;
+              z-index: 5;
+              position: absolute;
+              display: inline-block;
+              border-radius: 6px;
+              background: rgba(250, 200, 250, 0);
+              width: 280px;
+			}
+          .declaration {
+
+              top: 400px;
+              z-index: 0.8;
+              position: absolute;
+              display: inline-block;
+              border-radius: 5px;
+              background: rgba(250, 250, 250, 0.2);
+              width: 245px;
+           }
+          .doc {
+
+              top: 600px;
+              z-index: 0.8;
+              position: absolute;
+              display: inline-block;
+              border-radius: 5px;
+              background: rgba(250, 250, 250, 0.17);
+              width: 160px;
+           }
+		</style>
+	</head>
+	
+	<body>
+		<div id="title" style="left:0px;" class="mytitle">
+      <span style="color: #fff;padding:60px 20px;">yma16个人主页</span>
+  </div>
+<div id="declaration1" style="left:520px;" class="declaration">
+      <span style="color: #fff;padding:10px 20px;">Stay hungry,Stay modest.</span>
+  </div>
+		
+<div id="doc1" style="left:400px;" class="doc">
+    <a style="margin-left:5px;" href="https://yongma16.github.io/" target="_blank">
+      <span style="color: #fff;padding:10px 20px;">yma16个人博客</span>
+    </a>
+  </div>
+<div id="doc2" style="left:800px;" class="doc">
+    <a style="" href="https://yongma16.github.io/introduce/my_introduction.html" target="_blank">
+      <span style="color: #fff;padding:10px 20px;">yma16个人简历</span>
+    </a>
+  </div>
+		<script src="../build/three.js"></script>
+
+		<script src="js/renderers/Projector.js"></script>
+		<script src="js/renderers/CanvasRenderer.js"></script>
+
+		<script>
+
+			var mouseX = 0, mouseY = 0,
+
+			windowHalfX = window.innerWidth / 2,
+			windowHalfY = window.innerHeight / 2,
+
+			SEPARATION = 200,
+			AMOUNTX = 10,
+			AMOUNTY = 10,
+
+			camera, scene, renderer;
+
+			init();
+			animate();
+
+			function init() {
+
+				var container, separation = 100, amountX = 50, amountY = 50,
+				particles, particle;
+
+				container = document.createElement('div');
+				document.body.appendChild(container);
+
+				camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
+				camera.position.z = 100;
+
+				scene = new THREE.Scene();
+
+				renderer = new THREE.CanvasRenderer();
+				renderer.setPixelRatio( window.devicePixelRatio );
+				renderer.setSize( window.innerWidth, window.innerHeight );
+				container.appendChild( renderer.domElement );
+
+				// particles
+
+				var PI2 = Math.PI * 2;
+				var material = new THREE.SpriteCanvasMaterial( {
+
+					color: 0xffffff,
+					program: function ( context ) {
+
+						context.beginPath();
+						context.arc( 0, 0, 0.5, 0, PI2, true );
+						context.fill();
+
+					}
+
+				} );
+
+				var points = [];
+
+				for ( var i = 0; i < 100; i ++ ) {
+
+					particle = new THREE.Sprite( material );
+					particle.position.x = Math.random() * 2 - 1;
+					particle.position.y = Math.random() * 2 - 1;
+					particle.position.z = Math.random() * 2 - 1;
+					particle.position.normalize();
+					particle.position.multiplyScalar( Math.random() * 10 + 450 );
+					particle.scale.x = particle.scale.y = 10;
+					scene.add( particle );
+
+					points.push( particle.position );
+
+				}
+
+				// lines
+
+				var geometry = new THREE.BufferGeometry().setFromPoints( points );
+
+				var line = new THREE.Line( geometry, new THREE.LineBasicMaterial( { color: 0xffffff, opacity: 0.5 } ) );
+				scene.add( line );
+
+				document.addEventListener( 'mousemove', onDocumentMouseMove, false );
+				document.addEventListener( 'touchstart', onDocumentTouchStart, false );
+				document.addEventListener( 'touchmove', onDocumentTouchMove, false );
+
+				//
+
+				window.addEventListener( 'resize', onWindowResize, false );
+
+			}
+
+			function onWindowResize() {
+
+				windowHalfX = window.innerWidth / 2;
+				windowHalfY = window.innerHeight / 2;
+
+				camera.aspect = window.innerWidth / window.innerHeight;
+				camera.updateProjectionMatrix();
+
+				renderer.setSize( window.innerWidth, window.innerHeight );
+
+			}
+
+			//
+
+			function onDocumentMouseMove(event) {
+
+				mouseX = event.clientX - windowHalfX;
+				mouseY = event.clientY - windowHalfY;
+
+			}
+
+			function onDocumentTouchStart( event ) {
+
+				if ( event.touches.length > 1 ) {
+
+					event.preventDefault();
+
+					mouseX = event.touches[ 0 ].pageX - windowHalfX;
+					mouseY = event.touches[ 0 ].pageY - windowHalfY;
+
+				}
+
+			}
+
+			function onDocumentTouchMove( event ) {
+
+				if ( event.touches.length == 1 ) {
+
+					event.preventDefault();
+
+					mouseX = event.touches[ 0 ].pageX - windowHalfX;
+					mouseY = event.touches[ 0 ].pageY - windowHalfY;
+
+				}
+
+			}
+
+			//
+
+			function animate() {
+
+				requestAnimationFrame( animate );
+
+				render();
+
+			}
+
+			function render() {
+
+				camera.position.x += ( mouseX - camera.position.x ) * .05;
+				camera.position.y += ( - mouseY + 200 - camera.position.y ) * .05;
+				camera.lookAt( scene.position );
+
+				renderer.render( scene, camera );
+
+			}
+
+		</script>
+	</body>
+</html>
